# news-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
migrations/: 0002_entity_dedup.sql  2025_01_24_schema_optimization.sql
scripts/: backfill_article_topics.py  backfill_entity_edges.py  backfill_topic_search_terms.py  populate_fallback.py  recanonalize_entities.py  run_all.py  run_ingestor.py  run_pipeline.py  run_scraper.py  test_topic_generation.py
src/news_pipeline/: __init__.py
src/news_pipeline/ingestor/: __init__.py  cluster_jobs.py  clustering.py  config.py  coordinate_ranker.py  db.py  feature_jobs.py  ner_link.py  openai_embed.py  processor.py  run.py  run_ingestion.py  schema.py  source_bias.json  stance_worker.py  topics.py  topics_dynamic.py  utils.py
src/news_pipeline/ingestor/_archive/: __init__.py  cache.py  communities.py  cooccur.py  neighbors.py
src/news_pipeline/ingestor/clustering/: __init__.py  clusterer.py  maintenance.py  topics_dynamic.py
src/news_pipeline/ingestor/core/: __init__.py  db.py  utils.py
src/news_pipeline/ingestor/data/: __init__.py  sources.py
src/news_pipeline/ingestor/llm/: __init__.py  client.py  embedder.py  entities.py  ranker.py  stance.py
src/news_pipeline/ingestor/pipeline/: __init__.py  features.py  processor.py
src/news_pipeline/scraper/: __init__.py  core.py  models.py
src/news_pipeline/scraper/sources/: __init__.py  newsdata.py
